--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,3 +18,10 @@
   </li>
 </ul>
 
+<button (click)="increment()">Increment</button>
+
+<div>Current Count: {{ count$ | async }}</div>
+
+<button (click)="decrement()">Decrement</button>
+
+<button (click)="reset()">Reset Counter</button>
