--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,13 +18,5 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
-
-<button (click)="increment()">Increment</button>
-
-<div>Current Count: {{ count$ | async }}</div>
-
-<button (click)="decrement()">Decrement</button>
-
-<button (click)="reset()">Reset Counter</button>
-
+<app-counter></app-counter>
 <app-scoreboard></app-scoreboard>
